Closed
Bug 350455
Opened 19 years ago
Closed 19 years ago
Japanese printing page shown garbage character.
Categories
(Core :: Printing: Output, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: toshihiro, Assigned: toshihiro)
Details
(Keywords: fixed1.8.1.1)
Attachments
(1 file)
|
705 bytes,
patch
|
bzbarsky
:
superreview+
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; ja-JP; rv:1.8.0.6) Gecko/20060825 Firefox/1.5.0.6
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; ja-JP; rv:1.8.0.6) Gecko/20060825 Firefox/1.5.0.6
Print Japanese webpage with TTC fonts, the some character are shown as boxes.
Reproducible: Always
| Assignee | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Comment 2•19 years ago
|
||
This problem is caused by the gfx PS generator which does not handle TTC face index correctly.I've made a patch to fix this problem.
| Assignee | ||
Updated•19 years ago
|
Version: unspecified → 1.5.0.x Branch
Comment 3•19 years ago
|
||
You should request review from one of the HTML to PS peers http://www.mozilla.org/owners.html#html-to-text-postscript-translation
Updated•19 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•19 years ago
|
||
Comment on attachment 235732 [details] [diff] [review]
set face index correctly.
vlad, do you think you can review this? I'm really not very familiar with XFT stuff...
If you're not comfortable with this, do you know who might be?
Attachment #235732 -
Flags: review?(vladimir)
Updated•19 years ago
|
Flags: blocking1.9?
Comment 5•19 years ago
|
||
The patch looks good. It does exactly what cairo and Xft do.
Comment 6•19 years ago
|
||
Comment on attachment 235732 [details] [diff] [review]
set face index correctly.
Sounds like an r+ to me. ;) I'll go out on a limb here and sr.
Attachment #235732 -
Flags: superreview+
Attachment #235732 -
Flags: review?(vladimir)
Attachment #235732 -
Flags: review+
Updated•19 years ago
|
Assignee: nobody → printing
Component: General → Printing
Flags: review+
Product: Firefox → Core
QA Contact: general
Version: 1.5.0.x Branch → 1.8 Branch
Updated•19 years ago
|
Assignee: printing → toshihiro
Comment 7•19 years ago
|
||
I checked in the fix on trunk. Should we try to fix this on the 1.8 branch as well? How serious a problem is it in daily use?
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 8•19 years ago
|
||
(In reply to comment #7)
> I checked in the fix on trunk. Should we try to fix this on the 1.8 branch as
> well? How serious a problem is it in daily use?
As far as I know, there's no free TTC (true type collection) font available for Linux, which is why I haven't stumbled upon the problem. Some Linux users just copy TTCs from their Windows and there might be some commercial TTC fonts used by Linux users (or other Unix users).
Anyway, the patch is simple and safe enough so that I'd fix it in the 1.8 branch.
Comment 9•19 years ago
|
||
Comment on attachment 235732 [details] [diff] [review]
set face index correctly.
Should be pretty safe and helps with some non-Western fonts, apparently...
Attachment #235732 -
Flags: approval1.8.1.1?
Comment 10•19 years ago
|
||
Comment on attachment 235732 [details] [diff] [review]
set face index correctly.
approved for 1.8 branch, a=dveditz for drivers
Attachment #235732 -
Flags: approval1.8.1.1? → approval1.8.1.1+
You need to log in
before you can comment on or make changes to this bug.
Description
•