Set face index correctly.  Bug 350455, patch by ToshihiroYamagishi <toshihiro@turbolinux.co.jp>, r=mozilla@behdad.org, sr=bzbarsky